--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>教学案例，免费学习</title>
     <style>
         div {
-            width: 66%;
+            width: 76%;
             margin: 0 auto;
         }
 
@@ -25,6 +25,9 @@
             color: red;
         }
         .red{
+            color:blue;
+        }
+        .reds{
             color:red;
         }
         p.lihe{
@@ -44,6 +47,13 @@
             line-height: 20px;
             text-indent: 2em;
         }
+       /* body{*/
+           /*background: crimson;*/
+          /*  background-image: url("http://www.gyun.org/images/70bjxx.png");
+            background-repeat: no-repeat;*/
+            /*background-position: 10px 10px ;*/
+ /*           background-size: 121%;
+        }*/
     </style>
     <script>
         var _hmt = _hmt || [];
@@ -69,6 +79,9 @@
         <li><a target="_blank" href="http://www.gyun.org/java1_chapter5_array.pdf">java1_chapter5_array.pdf(Java入门学习-数组文档资料) 2019-09-13</a></li>
         <li><a target="_blank" href="http://www.gyun.org/java1_chapter5_array.zip">java1_chapter5_array.zip(Java入门学习-数组手写小Demo) 2019-09-22</a></li>
         <li><a target="_blank" href="http://www.gyun.org/java1_chapter6_array_two.zip">java1_chapter6_array_two.zip(Java入门学习-二维数组手写小Demo) 2019-09-22</a></li>
+        <li><a target="_blank" href="http://www.gyun.org/java1_chapter9_test3.zip">java1_chapter9_test3.zip(Java入门学习-方法封装与继承手写小Demo) 2019-09-26</a></li>
+        <li><a target="_blank" href="http://www.gyun.org/java1_chapter910_test.zip">java1_chapter910_test.zip(Java入门学习-方法重写与多态手写小Demo) 2019-09-26</a></li>        <li><a target="_blank" href="http://www.gyun.org/java1_chapter911_test1.zip">java1_chapter911_test1.zip(Java入门学习-多态手写小Demo(多态更新1）) 2019-10-10</a></li>
+        <li><a target="_blank" href="http://www.gyun.org/java1_chapter911_interface.zip">java1_chapter911_interface.zip(Java入门学习-手写接口小Demo) 2019-10-12</a></li>
         <li><a target="_blank" href="http://www.gyun.org/java6_chapter2_session_cookie_application.zip">
             java6_chapter2_session_cookie_application.zip(手写数据的传递和保存小Demo) 2019-07-26</a></li>
         <li><a target="_blank" href="http://www.gyun.org/java6_chapter3_jdbc.zip"> java6_chapter3_jdbc.zip(手写JDBC小Demo) 2019-07-29</a>
@@ -98,8 +111,13 @@
             java6_chapter912_ajax_jquery3.zip(手写使用jquery发送Ajax请求的几种异步刷新方式小Demo)　2019-08-21</a><strong><a target="_blank" href="http://myxyz.com.cn/java6_chapter912_ajax_jquery3/ajaxtest_base.jsp">在线Demo</a></strong></li>
         <li><a target="_blank" href="http://www.gyun.org/java6_chapter912_ajax_jquery4_serializeArray_fastjson.zip">
             java6_chapter912_ajax_jquery4_serializeArray_fastjson.zip(手写jquery简化表单元素提交和FASTJSON的应用小Demo)　2019-08-26</a>&nbsp;&nbsp;<strong><a target="_blank" href="http://myxyz.com.cn/java6_chapter912_ajax_jquery4_serializeArray_fastjson/register.jsp">在线Demo1</a>&nbsp;&nbsp;<a target="_blank" href="http://myxyz.com.cn/java6_chapter912_ajax_jquery4_serializeArray_fastjson/login.jsp">在线Demo2</a></strong></li>
+        <li><a target="_blank" href="http://www.gyun.org/java7_chapter6_springandmybatis.zip">
+            java7_chapter6_springandmybatis.zip(手写Spring和Mybatis的整合小Demo)　2019-09-27</a></li>
+        <li><a target="_blank" href="http://www.gyun.org/声明式事务的注解方式.rar">
+        声明式事务的注解方式.rar(手写声明式事务的注解方式文档资料（含代码）)　2019-10-09　更新2019-10-12</a></li>
+        <li><a target="_blank" href="http://www.gyun.org/Spring的数据源配置.rar">
+            Spring的数据源配置.rar(手写Spring的数据源配置文档资料（含代码）)　2019-10-09</a></li>
     </ol>
-
    <p class="red lihe">我是<strong>北大青鸟的一名认证老师</strong>，<strong>主讲JAVA7.0</strong>，有想<strong>系统学习JAVA或C#编程</strong>的朋友，请速与我联系，近期开班，<strong>说重点：凡咨询报名，说是北大青鸟的董老师介绍过来的同学，可以在全国统一价不变的基本上给予奖励噢！注意全国北大青鸟都有效噢！</strong>请大家抓紧时间。有意者请联系！具体私聊<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1050968899&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1050968899:52" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>&nbsp</p>
     <p class="red">教学模式为：<strong>线上</strong>(在线视频：PC+ANDROID+IOS都可以在线看)+<strong>线下</strong>(面授：来学校上课)+<strong>实训</strong>(就业指导)+<strong>推荐工作</strong></p>
     <h3>如有疑问或建议,请在线加QQ：&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1050968899&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1050968899:52" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>&nbsp;
@@ -109,9 +127,10 @@
     <h4 class="blue center line">想系统学习JAVA的学友请加备注：<span class="red font">xx</span> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;想提升技术的学友请加备注：<span class="red font">js</span> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;需要资料的学友请加备注：<span class="red font">zl</span></h4>
 
     <h2>请关注一下我的<a target="_blank" href="https://blog.csdn.net/atgfg">博客</a>，这个更新最早。或&nbsp;关注一下我的<a target="_blank" href="https://github.com/qingyunjiao/qingyunjiao.github.io" >GitHub</a>，谢谢支持！</h2>
-    <p> <strong>小网站的地址为：<a href="http://www.gyun.org">http://www.gyun.org</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a onclick="addFavorite()" class="addFavorite">加入收藏夹</a>
+    <p> <strong>Java资源下载地址为：&nbsp;<a href="http://www.gyun.org">http://www.gyun.org</a></strong>（推荐）&nbsp;&nbsp;<strong><a target="_blank" href="http://www.javaxyz.com">http://www.javaxyz.com</a></strong>（备用）&nbsp;&nbsp;&nbsp;<a onclick="addFavorite()" class="addFavorite">加入收藏夹 建议使用谷歌浏览器</a>
     </p>
-    <h2 class="red">资源持续更新！敬请关注！</h2>　
+    <!--<p><strong>其它下载地址为：&nbsp;<a target="_blank" href="http://www.javaxyz.com">http://www.javaxyz.com</a></strong>（备用）</p>-->
+    <h2 class="reds">资源持续更新！敬请关注！</h2>　
 </div>
 </body>
 
